# Fortis

./: .gitignore  README.md  pyproject.toml
backend/: main.py  predictor.py  schemas.py
backend/notebooks/: 01_eda.ipynb
data/: feature_groups.json
data/processed/: model_schema.json
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/charts/: AcwrChart.jsx  SessionTimeline.jsx
frontend/src/components/layout/: Shell.jsx  Sidebar.jsx
frontend/src/components/ui/: RiskBadge.jsx  RiskGauge.jsx  Spinner.jsx  StatCard.jsx
frontend/src/pages/: AthleteProfile.jsx  Dashboard.jsx  Predict.jsx
models/: fortis_ann.keras  fortis_ann_best.keras  knn_imputer.joblib  standard_scaler.joblib
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_model.ipynb
